test/sema/typeck/lambda/variadic-array-argument.dora
fn f(sum: (Int32...): Int32, values: Array[Int32]): Int32 {
    sum(values)
}
